--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,13 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "~1.0",
+        "orangehill/iseed": "^3.0",
         "tymon/jwt-auth": "^1.0.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "kitloong/laravel-migrations-generator": "^6.10",
         "laravel/breeze": "^0.1.0",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
